# u-tasks-repository

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
benchmarks/: hello_benchmark.cpp
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
docs/: api-spec.yaml  db_shema.drawio  functional_requirements.md
postgresql/schemas/: db_1.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/handler_api/: handler_api.cpp
src/static_handler/: static_handler.h
static/: index.html
tests/: conftest.py
unit_tests/: hello_test.cpp
